test/langtools/tools/javac/valhalla/lworld-values/CheckFinalize.out
CheckFinalize.java:10:20: compiler.err.value.class.may.not.override: finalize
CheckFinalize.java:15:12: compiler.err.report.access: finalize(), protected, java.lang.Object
CheckFinalize.java:15:12: compiler.warn.has.been.deprecated.for.removal: finalize(), java.lang.Object
CheckFinalize.java:15:21: compiler.err.value.class.does.not.support: finalize
CheckFinalize.java:16:20: compiler.err.value.class.does.not.support: finalize
4 errors
1 warning
